<resources>
    <string name="app_name">Lesson_3_Zhuravleva</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signIn">Sign In</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="error_input_msg">Field filled in incorrectly</string>
    <string name="buy">Buy</string>
    <string name="buy_now">Buy now</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="error_get_product_list">Unexpected error occurred</string>
    <string name="catalog">Catalog</string>
    <string name="sizes">Sizes</string>
    <string name="ruble">%1$s₽</string>
    <string name="marker">• %1$s\n</string>
    <string name="order_processing">Order processing</string>
    <string name="house">House</string>
    <string name="apartment">Apartment number</string>
    <string name="delivery_date">Delivery date</string>
    <string name="buy_for_rubles">Buy for %1$s₽</string>
    <string name="size_and_title">%1$s • %2$s</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="xs">XS</string>
    <string name="error_order_processing">An error occurred while placing your order</string>
    <string name="success_order_processing">Order №%1$s dated %2$s was successfully issued</string>
    <string name="choosing_a_house">Choosing a house</string>
    <string name="choose">Choose</string>
    <string name="fields_is_empty">All fields must be completed</string>
    <string name="size_is_not_selected">Please, choose a size</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="occupation">Occupation</string>
    <string name="another_occupation">Another Occupation</string>
    <string name="edit">Edit</string>
    <string name="developer">Developer</string>
    <string name="tester">Tester</string>
    <string name="manager">Manager</string>
    <string name="other">Other</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>

</resources>