<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.order.OrderFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="@dimen/normal_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="@dimen/normal_100"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id = "@+id/imageView"
        android:layout_width="@dimen/preview_size"
        android:layout_height="@dimen/preview_size"
        android:layout_marginTop="@dimen/normal_100"
        android:layout_marginEnd="@dimen/normal_100"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintEnd_toStartOf="@id/tvSizeAndTitle"
        />

    <TextView
        android:id = "@+id/tvSizeAndTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.H2"
        app:layout_constraintEnd_toEndOf="@id/endLine"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintBottom_toTopOf="@id/tvDepartment"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id = "@+id/tvDepartment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.H3"
        app:layout_constraintTop_toBottomOf="@id/tvSizeAndTitle"
        app:layout_constraintStart_toStartOf="@id/tvSizeAndTitle"
        app:layout_constraintEnd_toEndOf="@id/endLine"
        />

    <com.example.lesson_3_zhuravleva.presentation.ui.view.Counter
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/endLine"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textBoxHouse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/house"
        app:endIconDrawable="@drawable/ic_chevron_right"
        app:endIconMode="custom"
        android:layout_marginTop="@dimen/normal_200"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintEnd_toStartOf="@id/endLine">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvHouse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:longClickable="false"
            android:textCursorDrawable="@null"
            android:clickable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textBoxApartment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/apartment"
        android:layout_marginTop="@dimen/normal_200"
        app:layout_constraintTop_toBottomOf="@id/textBoxHouse"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintEnd_toStartOf="@id/endLine">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvApartment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textBoxDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/delivery_date"
        app:endIconDrawable="@drawable/ic_chevron_right"
        app:endIconMode="custom"
        android:layout_marginTop="@dimen/normal_200"
        app:layout_constraintTop_toBottomOf="@id/textBoxApartment"
        app:layout_constraintStart_toEndOf="@id/startLine"
        app:layout_constraintEnd_toStartOf="@id/endLine">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:longClickable="false"
            android:textCursorDrawable="@null"
            android:clickable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/ic_up"
        app:navigationIconTint="@color/white"
        app:titleTextColor="@color/white"
        app:title="@string/order_processing"
        android:background="?colorPrimary"
        app:titleTextAppearance="@style/TextAppearance.Title"
        />

    <com.example.lesson_3_zhuravleva.presentation.ui.view.LoadableButton
        android:id="@+id/btnBuyFor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/endLine"
        app:layout_constraintStart_toStartOf="@id/startLine"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/normal_100"
        />

</androidx.constraintlayout.widget.ConstraintLayout>